# COMP-COIN

./: .gitignore  Cargo.toml  README.md
src/: block.rs  lib.rs  mempool.rs  messages.rs  mine.rs  network.rs  node.rs  wallet.rs
src/block/: block.rs  keys.rs  mempool.rs  mod.rs  script.rs  transaction.rs  utxos.rs  wallet.rs
src/mine/: mod.rs  server.rs
src/network/: command_handling.rs  connection.rs  connection_message.rs  mod.rs  peers.rs  protocol.rs  protocol_handling.rs  server.rs
src/node/: commands.rs  mod.rs  node.rs  parser.rs  server.rs
src/ui/: api_messages.rs  mod.rs  server.rs
src/ui/static/: index.html  script.js  style.css
src/utils/: hash.rs  ips.rs  mod.rs  nonce.rs  numbers.rs  timestamp.rs
