[package]
name = "COMP-COIN"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
tokio = {version = "1.42", features = ["full"]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
rand = "0.9"
chrono = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
rand_core = { version = "0.6", features = ["getrandom"]}
hex = "0.4"
keyring = "3.6"
axum = "0.8"
tower = "0.5"
tower-http = {version = "0.6", features = ["fs", "cors"]}
webbrowser = "1.0"
reqwest = "0.13"
postcard = { version = "1.0", features = ["alloc"] }
get_if_addrs = "0.5"


[[bin]]
name = "testing"
path = "src/bin/testing.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"